# ports

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.claude/commands/: ports.md
.github/workflows/: ci.yml
docs/: plan-process-ancestry.md
src/: cli.rs  docker.rs  filter.rs  framework.rs  history.rs  interactive.rs  lib.rs  main.rs  project.rs  top.rs  types.rs  watch.rs
src/ancestry/: git.rs  linux.rs  macos.rs  mod.rs  source.rs
src/commands/: history.rs  kill.rs  list.rs  mod.rs  query.rs  why.rs
src/output/: json.rs  table.rs
src/platform/: fallback.rs  macos.rs  mod.rs
src/platform/linux/: mod.rs  proc_fd.rs  proc_parser.rs  process.rs
tests/: dev_filter_integration.rs  history_integration.rs  integration.rs  why_integration.rs
