[package]
name = "ports"
version = "0.1.0"
edition = "2021"
description = "Modern cross-platform port inspector"
license = "MIT"
repository = "https://github.com/ree-see/ports"
readme = "README.md"
keywords = ["cli", "network", "ports", "netstat", "lsof"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
listeners = "0.3"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
colored = "2"
comfy-table = "7"
anyhow = "1"
sysinfo = "0.32"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dialoguer = "0.11"
crossterm = "0.28"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
