[package]
name = "portls"
version = "0.6.0"
edition = "2021"
description = "Modern cross-platform port inspector - ls for network ports"
license = "MIT"
repository = "https://github.com/ree-see/ports"
readme = "README.md"
keywords = ["cli", "network", "ports", "netstat", "lsof"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "ports"
path = "src/main.rs"

[features]
default = ["docker", "tui", "history", "watch"]
docker = ["dep:bollard", "dep:tokio"]
tui = ["dep:ratatui", "dep:crossterm", "dep:dialoguer"]
history = ["dep:rusqlite", "dep:chrono"]
watch = []

[dependencies]
listeners = "0.3"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
colored = "2"
comfy-table = "7"
anyhow = "1"
nix = { version = "0.29", features = ["signal", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
regex = "1.10"

# Optional, gated behind features.
bollard = { version = "0.17", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"], optional = true }
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }
dialoguer = { version = "0.11", optional = true }
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }

[dev-dependencies]
tempfile = "3"
